# ara-agent

./: .gitignore  AGENT.md  CLAUDE.md  README.md  pyproject.toml
docs/adr/: 0001-hybrid-architecture.md  README.md
src/ara_agent/: brain.py  cli.py  context.py  cost_hud.py  hotkeys.py  icons.py  log_setup.py  menu_bar.py  output_hud.py  overlay.py  rotary_hud.py  screenshot.py  voice_agent.py
src/ara_agent/tools/: __init__.py  definitions.py
