[project]
name = "ara-agent"
version = "0.1.0"
description = "Voice-first Grok computer agent for macOS. Ara speaks, thinks, and acts locally."
authors = [
    { name = "Victor Busnita" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "keyring>=24.0",
    "rumps>=0.4.0",
    "Pillow>=10.0",
    "pyobjc-framework-Vision>=10.0",
]

[project.scripts]
ara = "ara_agent.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
